Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from Grammar.y
-----------------------------------------------------------------------------

state 86 contains 1 shift/reduce conflicts.
state 97 contains 1 shift/reduce conflicts.
state 102 contains 1 shift/reduce conflicts.
state 118 contains 2 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 129 contains 2 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 130 contains 2 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 131 contains 2 shift/reduce conflicts.
state 132 contains 1 shift/reduce conflicts.
state 133 contains 7 shift/reduce conflicts.
state 135 contains 7 shift/reduce conflicts.
state 136 contains 7 shift/reduce conflicts.
state 137 contains 7 shift/reduce conflicts.
state 138 contains 7 shift/reduce conflicts.
state 139 contains 7 shift/reduce conflicts.
state 140 contains 7 shift/reduce conflicts.

rule 8 is unused
rule 9 is unused
rule 70 is unused
rule 71 is unused

terminal FROMTABLES is unused
terminal TABLE is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Start                          (0)
	Start -> '{' Inputs '}' Queries Output             (1)
	Inputs -> Input ',' Inputs                         (2)
	Inputs -> Input                                    (3)
	Input -> INPUT FILE var AS TableAssignment         (4)
	TableAssignment -> TableName NOLABELS              (5)
	TableAssignment -> TableName WITHLABELS ColumnLabels   (6)
	TableName -> AlphaNumericString                    (7)
	Tables -> TableName ',' TableName                  (8)
	Tables -> TableName                                (9)
	ColumnLabels -> '[' AlphaNumericStrings ']'        (10)
	ColumnReference -> TableName '.' AlphaNumericString   (11)
	ColumnReference -> TableName '.' int               (12)
	Output -> OUTPUT TableName TO OutputType           (13)
	OutputType -> STANDARD                             (14)
	OutputType -> FILE var                             (15)
	Position -> int ',' int                            (16)
	Axis -> COLUMN int                                 (17)
	Axis -> ROW int                                    (18)
	Queries -> LET TableName BE Query '-' Queries      (19)
	Queries -> QUERIESEND                              (20)
	TableExpression -> TableName                       (21)
	TableExpression -> LET TableAssignment BE Query    (22)
	TableExpression -> LET TableAssignment BE JoinClause   (23)
	TableExpression -> '(' TableExpression ')'         (24)
	Query -> MERGE                                     (25)
	Query -> Selection                                 (26)
	Query -> PRODUCT                                   (27)
	Query -> SORT TableName                            (28)
	Query -> INSERT var TableName Position             (29)
	Query -> FILL var TableName Axis                   (30)
	Query -> DELETE TableName Axis                     (31)
	Query -> CLEAR TableName Position                  (32)
	Selection -> SELECT MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause   (33)
	MaxClause -> MAX Number                            (34)
	MaxClause ->                                       (35)
	Distinct -> DISTINCT                               (36)
	Distinct ->                                        (37)
	ColumnChoice -> COLUMNS '*'                        (38)
	ColumnChoice -> COLUMNS ColumnReference            (39)
	ColumnChoice -> COLUMNS ColumnReference ColumnChoice   (40)
	WhereClause -> WHERE BooleanExpression             (41)
	WhereClause ->                                     (42)
	PlusClause -> PLUS Selection                       (43)
	PlusClause ->                                      (44)
	JoinClause -> TableExpression JoinOperator TableExpression WITHCONSTRAINT BooleanExpression   (45)
	JoinOperator -> INNER JOIN                         (46)
	JoinOperator -> LEFT JOIN                          (47)
	JoinOperator -> RIGHT JOIN                         (48)
	JoinOperator -> FULL JOIN                          (49)
	JoinOperator -> OUTER JOIN                         (50)
	BooleanExpression -> '(' BooleanExpression ')'     (51)
	BooleanExpression -> BooleanExpression AND BooleanExpression   (52)
	BooleanExpression -> BooleanExpression OR BooleanExpression   (53)
	BooleanExpression -> NOT BooleanExpression         (54)
	BooleanExpression -> SubExpression '=' SubExpression   (55)
	SubExpression -> BooleanExpression                 (56)
	SubExpression -> ColumnReference                   (57)
	SubExpression -> var                               (58)
	SubExpression -> IndexExpression                   (59)
	IndexExpression -> INDEX                           (60)
	IndexExpression -> Number                          (61)
	IndexExpression -> '(' IndexExpression ')'         (62)
	IndexExpression -> IndexExpression '+' IndexExpression   (63)
	IndexExpression -> IndexExpression '-' IndexExpression   (64)
	IndexExpression -> IndexExpression '*' IndexExpression   (65)
	IndexExpression -> IndexExpression '/' IndexExpression   (66)
	IndexExpression -> IndexExpression "//" IndexExpression   (67)
	IndexExpression -> IndexExpression '%' IndexExpression   (68)
	IndexExpression -> IndexExpression '^' IndexExpression   (69)
	Strings -> var ',' Strings                         (70)
	Strings -> var                                     (71)
	AlphaNumericStrings -> AlphaNumericString          (72)
	AlphaNumericStrings -> AlphaNumericString AlphaNumericStrings   (73)
	AlphaNumericString -> var                          (74)
	Number -> '+' int                                  (75)
	Number -> '+' int '.' int                          (76)
	Number -> '-' int                                  (77)
	Number -> '-' int '.' int                          (78)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	INPUT          { PT _ TokenINPUT }
	OUTPUT         { PT _ TokenOUTPUT }
	LET            { PT _ TokenLET }
	BE             { PT _ TokenBE }
	QUERIESEND     { PT _ TokenQueriesEnd }
	MERGE          { PT _ TokenMERGE }
	SELECT         { PT _ TokenSELECT }
	TO             { PT _ TokenTO }
	STANDARD       { PT _ TokenSTANDARD }
	FILE           { PT _ TokenFILE }
	PRODUCT        { PT _ TokenPRODUCT }
	SORT           { PT _ TokenSORT }
	INSERT         { PT _ TokenINSERT }
	FILL           { PT _ TokenFILL }
	DELETE         { PT _ TokenDELETE }
	CLEAR          { PT _ TokenCLEAR }
	COLUMN         { PT _ TokenCOLUMN }
	COLUMNS        { PT _ TokenCOLUMNS }
	ROW            { PT _ TokenROW }
	FROMTABLES     { PT _ TokenFROMTABLES }
	FROM           { PT _ TokenFROM }
	JOIN           { PT _ TokenJOIN }
	INNER          { PT _ TokenINNER }
	LEFT           { PT _ TokenLEFT }
	RIGHT          { PT _ TokenRIGHT }
	FULL           { PT _ TokenFULL }
	OUTER          { PT _ TokenOUTER }
	TABLE          { PT _ TokenTABLE }
	AS             { PT _ TokenAS }
	WITHLABELS     { PT _ TokenWITHLABELS }
	NOLABELS       { PT _ TokenNOLABELS }
	WHERE          { PT _ TokenWHERE }
	WITHCONSTRAINT { PT _ TokenWITHCONSTRAINT }
	AND            { PT _ TokenAND }
	OR             { PT _ TokenOR }
	NOT            { PT _ TokenNOT }
	INDEX          { PT _ TokenINDEX }
	MAX            { PT _ TokenMAX }
	PLUS           { PT _ TokenPLUSWORD }
	DISTINCT       { PT _ TokenDISTINCT }
	int            { PT _ (TokenInt $$) }
	var            { PT _ (TokenVAlphaLower $$) }
	'='            { PT _ TokenEQUAL }
	'+'            { PT _ TokenPLUS }
	'*'            { PT _ TokenMULTIPLY }
	'/'            { PT _ TokenDIVSINGLE }
	"//"           { PT _ TokenDIVTWO }
	'%'            { PT _ TokenPERCENT }
	'^'            { PT _ TokenEXP }
	'{'            { PT _ TokenSquigleBracketL }
	'}'            { PT _ TokenSquigleBracketR }
	'-'            { PT _ TokenDash }
	','            { PT _ TokenComma }
	'['            { PT _ TokenSquareBracketL }
	']'            { PT _ TokenSquareBracketR }
	'.'            { PT _ TokenDot }
	'('            { PT _ TokenBracketL }
	')'            { PT _ TokenBracketR }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Start           rule  1
	Inputs          rules 2, 3
	Input           rule  4
	TableAssignment rules 5, 6
	TableName       rule  7
	Tables          rules 8, 9
	ColumnLabels    rule  10
	ColumnReference rules 11, 12
	Output          rule  13
	OutputType      rules 14, 15
	Position        rule  16
	Axis            rules 17, 18
	Queries         rules 19, 20
	TableExpression rules 21, 22, 23, 24
	Query           rules 25, 26, 27, 28, 29, 30, 31, 32
	Selection       rule  33
	MaxClause       rules 34, 35
	Distinct        rules 36, 37
	ColumnChoice    rules 38, 39, 40
	WhereClause     rules 41, 42
	PlusClause      rules 43, 44
	JoinClause      rule  45
	JoinOperator    rules 46, 47, 48, 49, 50
	BooleanExpression rules 51, 52, 53, 54, 55
	SubExpression   rules 56, 57, 58, 59
	IndexExpression rules 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	Strings         rules 70, 71
	AlphaNumericStrings rules 72, 73
	AlphaNumericString rule  74
	Number          rules 75, 76, 77, 78

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Start                         (rule 0)

	'{'            shift, and enter state 2

	Start          goto state 3

State 1

	Start -> . '{' Inputs '}' Queries Output            (rule 1)

	'{'            shift, and enter state 2


State 2

	Start -> '{' . Inputs '}' Queries Output            (rule 1)

	INPUT          shift, and enter state 6

	Inputs         goto state 4
	Input          goto state 5

State 3

	%start_parseCalc -> Start .                         (rule 0)

	%eof           accept


State 4

	Start -> '{' Inputs . '}' Queries Output            (rule 1)

	'}'            shift, and enter state 9


State 5

	Inputs -> Input . ',' Inputs                        (rule 2)
	Inputs -> Input .                                   (rule 3)

	'}'            reduce using rule 3
	','            shift, and enter state 8


State 6

	Input -> INPUT . FILE var AS TableAssignment        (rule 4)

	FILE           shift, and enter state 7


State 7

	Input -> INPUT FILE . var AS TableAssignment        (rule 4)

	var            shift, and enter state 14


State 8

	Inputs -> Input ',' . Inputs                        (rule 2)

	INPUT          shift, and enter state 6

	Inputs         goto state 13
	Input          goto state 5

State 9

	Start -> '{' Inputs '}' . Queries Output            (rule 1)

	LET            shift, and enter state 11
	QUERIESEND     shift, and enter state 12

	Queries        goto state 10

State 10

	Start -> '{' Inputs '}' Queries . Output            (rule 1)

	OUTPUT         shift, and enter state 20

	Output         goto state 19

State 11

	Queries -> LET . TableName BE Query '-' Queries     (rule 19)

	var            shift, and enter state 18

	TableName      goto state 16
	AlphaNumericStringgoto state 17

State 12

	Queries -> QUERIESEND .                             (rule 20)

	OUTPUT         reduce using rule 20


State 13

	Inputs -> Input ',' Inputs .                        (rule 2)

	'}'            reduce using rule 2


State 14

	Input -> INPUT FILE var . AS TableAssignment        (rule 4)

	AS             shift, and enter state 15


State 15

	Input -> INPUT FILE var AS . TableAssignment        (rule 4)

	var            shift, and enter state 18

	TableAssignmentgoto state 23
	TableName      goto state 24
	AlphaNumericStringgoto state 17

State 16

	Queries -> LET TableName . BE Query '-' Queries     (rule 19)

	BE             shift, and enter state 22


State 17

	TableName -> AlphaNumericString .                   (rule 7)

	BE             reduce using rule 7
	TO             reduce using rule 7
	COLUMN         reduce using rule 7
	ROW            reduce using rule 7
	INNER          reduce using rule 7
	LEFT           reduce using rule 7
	RIGHT          reduce using rule 7
	FULL           reduce using rule 7
	OUTER          reduce using rule 7
	WITHLABELS     reduce using rule 7
	NOLABELS       reduce using rule 7
	WHERE          reduce using rule 7
	WITHCONSTRAINT reduce using rule 7
	PLUS           reduce using rule 7
	int            reduce using rule 7
	'-'            reduce using rule 7
	'.'            reduce using rule 7
	')'            reduce using rule 7


State 18

	AlphaNumericString -> var .                         (rule 74)

	BE             reduce using rule 74
	TO             reduce using rule 74
	COLUMN         reduce using rule 74
	COLUMNS        reduce using rule 74
	ROW            reduce using rule 74
	FROM           reduce using rule 74
	INNER          reduce using rule 74
	LEFT           reduce using rule 74
	RIGHT          reduce using rule 74
	FULL           reduce using rule 74
	OUTER          reduce using rule 74
	WITHLABELS     reduce using rule 74
	NOLABELS       reduce using rule 74
	WHERE          reduce using rule 74
	WITHCONSTRAINT reduce using rule 74
	AND            reduce using rule 74
	OR             reduce using rule 74
	PLUS           reduce using rule 74
	int            reduce using rule 74
	var            reduce using rule 74
	'='            reduce using rule 74
	'-'            reduce using rule 74
	']'            reduce using rule 74
	'.'            reduce using rule 74
	')'            reduce using rule 74


State 19

	Start -> '{' Inputs '}' Queries Output .            (rule 1)

	%eof           reduce using rule 1


State 20

	Output -> OUTPUT . TableName TO OutputType          (rule 13)

	var            shift, and enter state 18

	TableName      goto state 21
	AlphaNumericStringgoto state 17

State 21

	Output -> OUTPUT TableName . TO OutputType          (rule 13)

	TO             shift, and enter state 37


State 22

	Queries -> LET TableName BE . Query '-' Queries     (rule 19)

	MERGE          shift, and enter state 29
	SELECT         shift, and enter state 30
	PRODUCT        shift, and enter state 31
	SORT           shift, and enter state 32
	INSERT         shift, and enter state 33
	FILL           shift, and enter state 34
	DELETE         shift, and enter state 35
	CLEAR          shift, and enter state 36

	Query          goto state 27
	Selection      goto state 28

State 23

	Input -> INPUT FILE var AS TableAssignment .        (rule 4)

	'}'            reduce using rule 4
	','            reduce using rule 4


State 24

	TableAssignment -> TableName . NOLABELS             (rule 5)
	TableAssignment -> TableName . WITHLABELS ColumnLabels    (rule 6)

	WITHLABELS     shift, and enter state 25
	NOLABELS       shift, and enter state 26


State 25

	TableAssignment -> TableName WITHLABELS . ColumnLabels    (rule 6)

	'['            shift, and enter state 50

	ColumnLabels   goto state 49

State 26

	TableAssignment -> TableName NOLABELS .             (rule 5)

	BE             reduce using rule 5
	'}'            reduce using rule 5
	','            reduce using rule 5


State 27

	Queries -> LET TableName BE Query . '-' Queries     (rule 19)

	'-'            shift, and enter state 48


State 28

	Query -> Selection .                                (rule 26)

	INNER          reduce using rule 26
	LEFT           reduce using rule 26
	RIGHT          reduce using rule 26
	FULL           reduce using rule 26
	OUTER          reduce using rule 26
	WHERE          reduce using rule 26
	WITHCONSTRAINT reduce using rule 26
	PLUS           reduce using rule 26
	'-'            reduce using rule 26
	')'            reduce using rule 26


State 29

	Query -> MERGE .                                    (rule 25)

	INNER          reduce using rule 25
	LEFT           reduce using rule 25
	RIGHT          reduce using rule 25
	FULL           reduce using rule 25
	OUTER          reduce using rule 25
	WHERE          reduce using rule 25
	WITHCONSTRAINT reduce using rule 25
	PLUS           reduce using rule 25
	'-'            reduce using rule 25
	')'            reduce using rule 25


State 30

	Selection -> SELECT . MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 33)

	COLUMNS        reduce using rule 35
	MAX            shift, and enter state 47
	DISTINCT       reduce using rule 35

	MaxClause      goto state 46

State 31

	Query -> PRODUCT .                                  (rule 27)

	INNER          reduce using rule 27
	LEFT           reduce using rule 27
	RIGHT          reduce using rule 27
	FULL           reduce using rule 27
	OUTER          reduce using rule 27
	WHERE          reduce using rule 27
	WITHCONSTRAINT reduce using rule 27
	PLUS           reduce using rule 27
	'-'            reduce using rule 27
	')'            reduce using rule 27


State 32

	Query -> SORT . TableName                           (rule 28)

	var            shift, and enter state 18

	TableName      goto state 45
	AlphaNumericStringgoto state 17

State 33

	Query -> INSERT . var TableName Position            (rule 29)

	var            shift, and enter state 44


State 34

	Query -> FILL . var TableName Axis                  (rule 30)

	var            shift, and enter state 43


State 35

	Query -> DELETE . TableName Axis                    (rule 31)

	var            shift, and enter state 18

	TableName      goto state 42
	AlphaNumericStringgoto state 17

State 36

	Query -> CLEAR . TableName Position                 (rule 32)

	var            shift, and enter state 18

	TableName      goto state 41
	AlphaNumericStringgoto state 17

State 37

	Output -> OUTPUT TableName TO . OutputType          (rule 13)

	STANDARD       shift, and enter state 39
	FILE           shift, and enter state 40

	OutputType     goto state 38

State 38

	Output -> OUTPUT TableName TO OutputType .          (rule 13)

	%eof           reduce using rule 13


State 39

	OutputType -> STANDARD .                            (rule 14)

	%eof           reduce using rule 14


State 40

	OutputType -> FILE . var                            (rule 15)

	var            shift, and enter state 66


State 41

	Query -> CLEAR TableName . Position                 (rule 32)

	int            shift, and enter state 65

	Position       goto state 64

State 42

	Query -> DELETE TableName . Axis                    (rule 31)

	COLUMN         shift, and enter state 62
	ROW            shift, and enter state 63

	Axis           goto state 61

State 43

	Query -> FILL var . TableName Axis                  (rule 30)

	var            shift, and enter state 18

	TableName      goto state 60
	AlphaNumericStringgoto state 17

State 44

	Query -> INSERT var . TableName Position            (rule 29)

	var            shift, and enter state 18

	TableName      goto state 59
	AlphaNumericStringgoto state 17

State 45

	Query -> SORT TableName .                           (rule 28)

	INNER          reduce using rule 28
	LEFT           reduce using rule 28
	RIGHT          reduce using rule 28
	FULL           reduce using rule 28
	OUTER          reduce using rule 28
	WHERE          reduce using rule 28
	WITHCONSTRAINT reduce using rule 28
	PLUS           reduce using rule 28
	'-'            reduce using rule 28
	')'            reduce using rule 28


State 46

	Selection -> SELECT MaxClause . Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 33)

	COLUMNS        reduce using rule 37
	DISTINCT       shift, and enter state 58

	Distinct       goto state 57

State 47

	MaxClause -> MAX . Number                           (rule 34)

	'+'            shift, and enter state 55
	'-'            shift, and enter state 56

	Number         goto state 54

State 48

	Queries -> LET TableName BE Query '-' . Queries     (rule 19)

	LET            shift, and enter state 11
	QUERIESEND     shift, and enter state 12

	Queries        goto state 53

State 49

	TableAssignment -> TableName WITHLABELS ColumnLabels .    (rule 6)

	BE             reduce using rule 6
	'}'            reduce using rule 6
	','            reduce using rule 6


State 50

	ColumnLabels -> '[' . AlphaNumericStrings ']'       (rule 10)

	var            shift, and enter state 18

	AlphaNumericStringsgoto state 51
	AlphaNumericStringgoto state 52

State 51

	ColumnLabels -> '[' AlphaNumericStrings . ']'       (rule 10)

	']'            shift, and enter state 77


State 52

	AlphaNumericStrings -> AlphaNumericString .         (rule 72)
	AlphaNumericStrings -> AlphaNumericString . AlphaNumericStrings    (rule 73)

	var            shift, and enter state 18
	']'            reduce using rule 72

	AlphaNumericStringsgoto state 76
	AlphaNumericStringgoto state 52

State 53

	Queries -> LET TableName BE Query '-' Queries .     (rule 19)

	OUTPUT         reduce using rule 19


State 54

	MaxClause -> MAX Number .                           (rule 34)

	COLUMNS        reduce using rule 34
	DISTINCT       reduce using rule 34


State 55

	Number -> '+' . int                                 (rule 75)
	Number -> '+' . int '.' int                         (rule 76)

	int            shift, and enter state 75


State 56

	Number -> '-' . int                                 (rule 77)
	Number -> '-' . int '.' int                         (rule 78)

	int            shift, and enter state 74


State 57

	Selection -> SELECT MaxClause Distinct . ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 33)

	COLUMNS        shift, and enter state 73

	ColumnChoice   goto state 72

State 58

	Distinct -> DISTINCT .                              (rule 36)

	COLUMNS        reduce using rule 36


State 59

	Query -> INSERT var TableName . Position            (rule 29)

	int            shift, and enter state 65

	Position       goto state 71

State 60

	Query -> FILL var TableName . Axis                  (rule 30)

	COLUMN         shift, and enter state 62
	ROW            shift, and enter state 63

	Axis           goto state 70

State 61

	Query -> DELETE TableName Axis .                    (rule 31)

	INNER          reduce using rule 31
	LEFT           reduce using rule 31
	RIGHT          reduce using rule 31
	FULL           reduce using rule 31
	OUTER          reduce using rule 31
	WHERE          reduce using rule 31
	WITHCONSTRAINT reduce using rule 31
	PLUS           reduce using rule 31
	'-'            reduce using rule 31
	')'            reduce using rule 31


State 62

	Axis -> COLUMN . int                                (rule 17)

	int            shift, and enter state 69


State 63

	Axis -> ROW . int                                   (rule 18)

	int            shift, and enter state 68


State 64

	Query -> CLEAR TableName Position .                 (rule 32)

	INNER          reduce using rule 32
	LEFT           reduce using rule 32
	RIGHT          reduce using rule 32
	FULL           reduce using rule 32
	OUTER          reduce using rule 32
	WHERE          reduce using rule 32
	WITHCONSTRAINT reduce using rule 32
	PLUS           reduce using rule 32
	'-'            reduce using rule 32
	')'            reduce using rule 32


State 65

	Position -> int . ',' int                           (rule 16)

	','            shift, and enter state 67


State 66

	OutputType -> FILE var .                            (rule 15)

	%eof           reduce using rule 15


State 67

	Position -> int ',' . int                           (rule 16)

	int            shift, and enter state 84


State 68

	Axis -> ROW int .                                   (rule 18)

	INNER          reduce using rule 18
	LEFT           reduce using rule 18
	RIGHT          reduce using rule 18
	FULL           reduce using rule 18
	OUTER          reduce using rule 18
	WHERE          reduce using rule 18
	WITHCONSTRAINT reduce using rule 18
	PLUS           reduce using rule 18
	'-'            reduce using rule 18
	')'            reduce using rule 18


State 69

	Axis -> COLUMN int .                                (rule 17)

	INNER          reduce using rule 17
	LEFT           reduce using rule 17
	RIGHT          reduce using rule 17
	FULL           reduce using rule 17
	OUTER          reduce using rule 17
	WHERE          reduce using rule 17
	WITHCONSTRAINT reduce using rule 17
	PLUS           reduce using rule 17
	'-'            reduce using rule 17
	')'            reduce using rule 17


State 70

	Query -> FILL var TableName Axis .                  (rule 30)

	INNER          reduce using rule 30
	LEFT           reduce using rule 30
	RIGHT          reduce using rule 30
	FULL           reduce using rule 30
	OUTER          reduce using rule 30
	WHERE          reduce using rule 30
	WITHCONSTRAINT reduce using rule 30
	PLUS           reduce using rule 30
	'-'            reduce using rule 30
	')'            reduce using rule 30


State 71

	Query -> INSERT var TableName Position .            (rule 29)

	INNER          reduce using rule 29
	LEFT           reduce using rule 29
	RIGHT          reduce using rule 29
	FULL           reduce using rule 29
	OUTER          reduce using rule 29
	WHERE          reduce using rule 29
	WITHCONSTRAINT reduce using rule 29
	PLUS           reduce using rule 29
	'-'            reduce using rule 29
	')'            reduce using rule 29


State 72

	Selection -> SELECT MaxClause Distinct ColumnChoice . FROM TableExpression WhereClause PlusClause    (rule 33)

	FROM           shift, and enter state 83


State 73

	ColumnChoice -> COLUMNS . '*'                       (rule 38)
	ColumnChoice -> COLUMNS . ColumnReference           (rule 39)
	ColumnChoice -> COLUMNS . ColumnReference ColumnChoice    (rule 40)

	var            shift, and enter state 18
	'*'            shift, and enter state 82

	TableName      goto state 80
	ColumnReferencegoto state 81
	AlphaNumericStringgoto state 17

State 74

	Number -> '-' int .                                 (rule 77)
	Number -> '-' int . '.' int                         (rule 78)

	COLUMNS        reduce using rule 77
	INNER          reduce using rule 77
	LEFT           reduce using rule 77
	RIGHT          reduce using rule 77
	FULL           reduce using rule 77
	OUTER          reduce using rule 77
	WHERE          reduce using rule 77
	WITHCONSTRAINT reduce using rule 77
	AND            reduce using rule 77
	OR             reduce using rule 77
	PLUS           reduce using rule 77
	DISTINCT       reduce using rule 77
	'='            reduce using rule 77
	'+'            reduce using rule 77
	'*'            reduce using rule 77
	'/'            reduce using rule 77
	"//"           reduce using rule 77
	'%'            reduce using rule 77
	'^'            reduce using rule 77
	'-'            reduce using rule 77
	'.'            shift, and enter state 79
	')'            reduce using rule 77


State 75

	Number -> '+' int .                                 (rule 75)
	Number -> '+' int . '.' int                         (rule 76)

	COLUMNS        reduce using rule 75
	INNER          reduce using rule 75
	LEFT           reduce using rule 75
	RIGHT          reduce using rule 75
	FULL           reduce using rule 75
	OUTER          reduce using rule 75
	WHERE          reduce using rule 75
	WITHCONSTRAINT reduce using rule 75
	AND            reduce using rule 75
	OR             reduce using rule 75
	PLUS           reduce using rule 75
	DISTINCT       reduce using rule 75
	'='            reduce using rule 75
	'+'            reduce using rule 75
	'*'            reduce using rule 75
	'/'            reduce using rule 75
	"//"           reduce using rule 75
	'%'            reduce using rule 75
	'^'            reduce using rule 75
	'-'            reduce using rule 75
	'.'            shift, and enter state 78
	')'            reduce using rule 75


State 76

	AlphaNumericStrings -> AlphaNumericString AlphaNumericStrings .    (rule 73)

	']'            reduce using rule 73


State 77

	ColumnLabels -> '[' AlphaNumericStrings ']' .       (rule 10)

	BE             reduce using rule 10
	'}'            reduce using rule 10
	','            reduce using rule 10


State 78

	Number -> '+' int '.' . int                         (rule 76)

	int            shift, and enter state 92


State 79

	Number -> '-' int '.' . int                         (rule 78)

	int            shift, and enter state 91


State 80

	ColumnReference -> TableName . '.' AlphaNumericString    (rule 11)
	ColumnReference -> TableName . '.' int              (rule 12)

	'.'            shift, and enter state 90


State 81

	ColumnChoice -> COLUMNS ColumnReference .           (rule 39)
	ColumnChoice -> COLUMNS ColumnReference . ColumnChoice    (rule 40)

	COLUMNS        shift, and enter state 73
	FROM           reduce using rule 39

	ColumnChoice   goto state 89

State 82

	ColumnChoice -> COLUMNS '*' .                       (rule 38)

	FROM           reduce using rule 38


State 83

	Selection -> SELECT MaxClause Distinct ColumnChoice FROM . TableExpression WhereClause PlusClause    (rule 33)

	LET            shift, and enter state 87
	var            shift, and enter state 18
	'('            shift, and enter state 88

	TableName      goto state 85
	TableExpressiongoto state 86
	AlphaNumericStringgoto state 17

State 84

	Position -> int ',' int .                           (rule 16)

	INNER          reduce using rule 16
	LEFT           reduce using rule 16
	RIGHT          reduce using rule 16
	FULL           reduce using rule 16
	OUTER          reduce using rule 16
	WHERE          reduce using rule 16
	WITHCONSTRAINT reduce using rule 16
	PLUS           reduce using rule 16
	'-'            reduce using rule 16
	')'            reduce using rule 16


State 85

	TableExpression -> TableName .                      (rule 21)

	INNER          reduce using rule 21
	LEFT           reduce using rule 21
	RIGHT          reduce using rule 21
	FULL           reduce using rule 21
	OUTER          reduce using rule 21
	WHERE          reduce using rule 21
	WITHCONSTRAINT reduce using rule 21
	PLUS           reduce using rule 21
	'-'            reduce using rule 21
	')'            reduce using rule 21


State 86

	Selection -> SELECT MaxClause Distinct ColumnChoice FROM TableExpression . WhereClause PlusClause    (rule 33)

	INNER          reduce using rule 42
	LEFT           reduce using rule 42
	RIGHT          reduce using rule 42
	FULL           reduce using rule 42
	OUTER          reduce using rule 42
	WHERE          shift, and enter state 98
			(reduce using rule 42)

	WITHCONSTRAINT reduce using rule 42
	PLUS           reduce using rule 42
	'-'            reduce using rule 42
	')'            reduce using rule 42

	WhereClause    goto state 97

State 87

	TableExpression -> LET . TableAssignment BE Query    (rule 22)
	TableExpression -> LET . TableAssignment BE JoinClause    (rule 23)

	var            shift, and enter state 18

	TableAssignmentgoto state 96
	TableName      goto state 24
	AlphaNumericStringgoto state 17

State 88

	TableExpression -> '(' . TableExpression ')'        (rule 24)

	LET            shift, and enter state 87
	var            shift, and enter state 18
	'('            shift, and enter state 88

	TableName      goto state 85
	TableExpressiongoto state 95
	AlphaNumericStringgoto state 17

State 89

	ColumnChoice -> COLUMNS ColumnReference ColumnChoice .    (rule 40)

	FROM           reduce using rule 40


State 90

	ColumnReference -> TableName '.' . AlphaNumericString    (rule 11)
	ColumnReference -> TableName '.' . int              (rule 12)

	int            shift, and enter state 94
	var            shift, and enter state 18

	AlphaNumericStringgoto state 93

State 91

	Number -> '-' int '.' int .                         (rule 78)

	COLUMNS        reduce using rule 78
	INNER          reduce using rule 78
	LEFT           reduce using rule 78
	RIGHT          reduce using rule 78
	FULL           reduce using rule 78
	OUTER          reduce using rule 78
	WHERE          reduce using rule 78
	WITHCONSTRAINT reduce using rule 78
	AND            reduce using rule 78
	OR             reduce using rule 78
	PLUS           reduce using rule 78
	DISTINCT       reduce using rule 78
	'='            reduce using rule 78
	'+'            reduce using rule 78
	'*'            reduce using rule 78
	'/'            reduce using rule 78
	"//"           reduce using rule 78
	'%'            reduce using rule 78
	'^'            reduce using rule 78
	'-'            reduce using rule 78
	')'            reduce using rule 78


State 92

	Number -> '+' int '.' int .                         (rule 76)

	COLUMNS        reduce using rule 76
	INNER          reduce using rule 76
	LEFT           reduce using rule 76
	RIGHT          reduce using rule 76
	FULL           reduce using rule 76
	OUTER          reduce using rule 76
	WHERE          reduce using rule 76
	WITHCONSTRAINT reduce using rule 76
	AND            reduce using rule 76
	OR             reduce using rule 76
	PLUS           reduce using rule 76
	DISTINCT       reduce using rule 76
	'='            reduce using rule 76
	'+'            reduce using rule 76
	'*'            reduce using rule 76
	'/'            reduce using rule 76
	"//"           reduce using rule 76
	'%'            reduce using rule 76
	'^'            reduce using rule 76
	'-'            reduce using rule 76
	')'            reduce using rule 76


State 93

	ColumnReference -> TableName '.' AlphaNumericString .    (rule 11)

	COLUMNS        reduce using rule 11
	FROM           reduce using rule 11
	INNER          reduce using rule 11
	LEFT           reduce using rule 11
	RIGHT          reduce using rule 11
	FULL           reduce using rule 11
	OUTER          reduce using rule 11
	WHERE          reduce using rule 11
	WITHCONSTRAINT reduce using rule 11
	AND            reduce using rule 11
	OR             reduce using rule 11
	PLUS           reduce using rule 11
	'='            reduce using rule 11
	'-'            reduce using rule 11
	')'            reduce using rule 11


State 94

	ColumnReference -> TableName '.' int .              (rule 12)

	COLUMNS        reduce using rule 12
	FROM           reduce using rule 12
	INNER          reduce using rule 12
	LEFT           reduce using rule 12
	RIGHT          reduce using rule 12
	FULL           reduce using rule 12
	OUTER          reduce using rule 12
	WHERE          reduce using rule 12
	WITHCONSTRAINT reduce using rule 12
	AND            reduce using rule 12
	OR             reduce using rule 12
	PLUS           reduce using rule 12
	'='            reduce using rule 12
	'-'            reduce using rule 12
	')'            reduce using rule 12


State 95

	TableExpression -> '(' TableExpression . ')'        (rule 24)

	')'            shift, and enter state 111


State 96

	TableExpression -> LET TableAssignment . BE Query    (rule 22)
	TableExpression -> LET TableAssignment . BE JoinClause    (rule 23)

	BE             shift, and enter state 110


State 97

	Selection -> SELECT MaxClause Distinct ColumnChoice FROM TableExpression WhereClause . PlusClause    (rule 33)

	INNER          reduce using rule 44
	LEFT           reduce using rule 44
	RIGHT          reduce using rule 44
	FULL           reduce using rule 44
	OUTER          reduce using rule 44
	WHERE          reduce using rule 44
	WITHCONSTRAINT reduce using rule 44
	PLUS           shift, and enter state 109
			(reduce using rule 44)

	'-'            reduce using rule 44
	')'            reduce using rule 44

	PlusClause     goto state 108

State 98

	WhereClause -> WHERE . BooleanExpression            (rule 41)

	NOT            shift, and enter state 104
	INDEX          shift, and enter state 105
	var            shift, and enter state 106
	'+'            shift, and enter state 55
	'-'            shift, and enter state 56
	'('            shift, and enter state 107

	TableName      goto state 80
	ColumnReferencegoto state 99
	BooleanExpressiongoto state 100
	SubExpression  goto state 101
	IndexExpressiongoto state 102
	AlphaNumericStringgoto state 17
	Number         goto state 103
